Fix movement of site and footer visibility issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,4 @@
 /*}*/
 html, body {
     overflow-x: hidden;
-    position: fixed;
-    width: 100%;
 }
